--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -80,15 +80,15 @@
 @import "material-kit/sidebar";
 
 // Cards
-@import 'material-kit/cards';
-@import 'material-kit/cards/card-plain';
+@import "material-kit/cards";
+@import "material-kit/cards/card-plain";
 
 // Core Plugins
-@import 'material-kit/plugins/plugin-nouislider';
+@import "material-kit/plugins/plugin-nouislider";
 
 // Sections and Example pages
 @import "material-kit/example-pages";
-@import 'material-kit/sections/headers-extend';
-@import 'material-kit/sections/footers-extend';
+@import "material-kit/sections/headers-extend";
+@import "material-kit/sections/footers-extend";
 @import "material-kit/responsive";
-@import 'material-kit/misc-extend';
+@import "material-kit/misc-extend";
